--- a/ligapro_manager/templates/premium.html
+++ b/ligapro_manager/templates/premium.html
@@ -88,7 +88,7 @@
                     <p class="text-white/40">Al mes</p>
                 </div>
 
-                {% if current_user.is_premium %}
+                {% if current_user.is_active_premium %}
                 <button disabled class="btn-secondary w-full cursor-not-allowed opacity-50">
                     <i class="fas fa-check mr-2"></i>Ya eres Premium
                 </button>
@@ -140,7 +140,7 @@
                     <p class="text-white/40">Al año</p>
                 </div>
 
-                {% if current_user.is_premium %}
+                {% if current_user.is_active_premium %}
                 <button disabled class="btn-secondary w-full cursor-not-allowed opacity-50">
                     <i class="fas fa-check mr-2"></i>Ya eres Premium
                 </button>
